# rag-demo

./: .gitignore  README.md  pyproject.toml  skills-lock.json
chroma-server/: check_count.py  docker-compose.yaml
laws/: 劳动合同法.md  劳动法.md  民法典.md  消费者权益保护法.md
src/: config.py  embeddings.py  main.py  timer.py
src/graph/: generate_graph_png.py  graph.py  nodes.py  state.py
src/indexing/: chunker.py  indexer.py
